# atf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Readme.md  atf.hpp
doc/source/: conf.py  getting_started.md  index.rst
doc/source/api_reference/: cost_functions.rst  tuner_interface.rst
examples/feature_demonstration/program_guided_optimization/: CMakeLists.txt  program_guided_optimization.cpp
examples/feature_demonstration/result_check/: CMakeLists.txt  result_check.cpp
examples/full_examples/bash__gcc_flags/: CMakeLists.txt  bash__gcc_flags.cpp
examples/full_examples/bash__gcc_flags/raytracer/: compile_raytracer.sh
examples/full_examples/cuda__saxpy/: CMakeLists.txt  cuda__saxpy.cpp
examples/full_examples/opencl__saxpy/: CMakeLists.txt  opencl__saxpy.cpp
examples/full_examples/opencl__sgemm/: CMakeLists.txt  opencl__sgemm.cpp
include/: abort_condition.hpp  abort_conditions.hpp  atf.hpp  auc_bandit.hpp  bash_cf.hpp  big_int.hpp  cpp_cf.hpp  cuda_wrapper.hpp  differential_evolution.hpp  exploration_engine.hpp  helper.hpp  ocl_wrapper.hpp  op_wrapper.hpp  open_tuner.hpp  round_robin.hpp  search_space.hpp  search_space_tree.hpp  search_technique_1d.hpp  simulated_annealing.hpp  tp.hpp  tuning_status.hpp  value_type.hpp
include/atf/: auc_bandit.hpp  bash_cf.hpp  cuda_wrapper.hpp  exhaustive.hpp  exploration_engine.hpp  helper.hpp  ocl_wrapper.hpp  open_tuner.hpp  operators.hpp  particle_swarm.hpp  pattern_search.hpp  predicates.hpp  random_search.hpp  range.hpp  round_robin.hpp  search_space_tree.hpp  search_technique.hpp  torczon.hpp  tp.hpp  tp_value.hpp  tp_value_node.hpp
include/atf/detail/: big_int_InfInt.hpp  exploration_engine_def.hpp
include/detail/: big_int_InfInt.hpp  exploration_engine_def.hpp  utility.hpp
include/detail/pso/: multivariate_distribution.hpp  particle.hpp  swarm.hpp  xs.hpp
